modified a doc by erasying lines 2 to 5 and deivering as pdf

--- a/helloworld.Rmd
+++ b/helloworld.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "**Helloworld**"
-author: "*alvaro-colli*"
-date: "8/11/2020"
-output: pdf_document
+output:
+  pdf_document: default
+  html_document: default
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
